syntax = "proto3";

package vuong.app.v1;
option java_package = "com.vuong.app.v1";
option java_multiple_files = true;
option java_outer_classname = "ChannelProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "common.proto";
import "operator.proto";
import "discord/doman.proto";

message GrpcChannel {
  string channel_id = 1;
  string name = 2;
  GrpcChannelType type = 3;
  string server_id = 4;
  string created_at = 5;
  string updated_at = 6;
}

message GrpcCreateChannelRequest {
  string profile_id = 1;
  string server_id = 2;
  string name = 3;
  GrpcChannelType type = 4;
}

message GrpcCreateChannelResponse {
  int32 result = 1;
}

message GrpcUpdateChannelRequest {
  string profile_id = 1;
  string channel_id = 2;
  string name = 3;
}

message GrpcUpdateChannelResponse {
  int32 result = 1;
}

message GrpcDeleteChannelRequest {
  string profile_id = 1;
  string channel_id = 2;
}

message GrpcDeleteChannelResponse {
  int32 result = 1;
}

message GrpcGetChannelGeneralByServerIdRequest {
  string profile_id = 1;
  string server_id = 2;
}

message GrpcGetChannelGeneralByServerIdResponse {
  GrpcChannel result = 1;
}

message GrpcGetChannelByChannelIdRequest {
  string profile_id = 1;
  string channel_id = 2;
}

message GrpcGetChannelByChannelIdResponse {
  GrpcChannel result = 1;
}

message GrpcGetChannelsByServerIdRequest {
  string profile_id = 1;
  string server_id = 2;
  int32 page_number = 3;
  int32 page_size = 4;
}

message GrpcGetChannelsByServerIdResponse {
  GrpcMeta meta = 1;
  repeated GrpcChannel content = 2;
}

service ChannelService {
  rpc createChannel(vuong.app.v1.GrpcRequest) returns (vuong.app.v1.GrpcResponse);
  rpc updateChannel(vuong.app.v1.GrpcRequest) returns (vuong.app.v1.GrpcResponse);
  rpc deleteChannel(vuong.app.v1.GrpcRequest) returns (vuong.app.v1.GrpcResponse);
  rpc getChannelGeneralByServerId(vuong.app.v1.GrpcRequest) returns (vuong.app.v1.GrpcResponse);
  rpc getChannelByChannelId(vuong.app.v1.GrpcRequest) returns (vuong.app.v1.GrpcResponse);
  rpc getChannelsByServerId(vuong.app.v1.GrpcRequest) returns (vuong.app.v1.GrpcResponse);
}

